added imgs file

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <section id="about">
                 <h2>About Me</h2>
-                <img src="https://picsum.photos/seed/avatar/200/200" alt="Author avatar" class="avatar">
+                <img src="imgs/pimg.jpg" alt="Author avatar" class="avatar">
                 <p>Hi, I'm Abdulkhadar M Patel , a passionate web developer with 2 Months of experience. I love exploring new technologies and sharing my knowledge through this blog.</p>
                 <p>My expertise includes:</p>
                 <ul>
